# dFC_Cam-CAN

./: 1_2_3_submit_preprocessing.sh  5_submit_leida_analyses.sh  6_submit_nctpy_analyses.sh  README.md  consistency_thresholding.py  import_Cam-CAN_data.py  install_packages.r  leida-matlab_analyses.py  nctpy_analyses.py  nuisance_var_analyses.m  prep_data.py
LEiDA_inputs/: metadata.csv  rois_coordinates.csv  rois_labels.txt
PLS_group_analyses/: 7_submit_group_analysis.sh  NCT_meancentered_LV1_bsr.csv  NCT_meancentered_LV2_bsr.csv  PLS_group_analyses.m  results.mat
PLS_group_analyses/inputs/: fractional_occupancy_K5_OA_high_VWM_31_subs_X.csv  fractional_occupancy_K5_OA_low_VWM_52_subs_X.csv  fractional_occupancy_K5_YA_high_VWM_67_subs_X.csv  fractional_occupancy_K5_YA_low_VWM_47_subs_X.csv  state_transition_5_to_3_node_energy_dict_continous_OA_high_VWM_31_subs_X.csv  state_transition_5_to_3_node_energy_dict_continous_OA_low_VWM_52_subs_X.csv  state_transition_5_to_3_node_energy_dict_continous_YA_high_VWM_67_subs_X.csv  state_transition_5_to_3_node_energy_dict_continous_YA_low_VWM_47_subs_X.csv
python_packages/PyNeudorf/: README.md  pyproject.toml
python_packages/PyNeudorf/src/PyNeudorf/: graphs.py  pls.py  utils.py  visualization.py
python_packages/PyNeudorf/src/PyNeudorf/data/: ggseg_Schaefer200.r
python_packages/brainvistools/: LICENSE  README.md  pyproject.toml
python_packages/brainvistools/src/brainvistools/: visualization.py
python_packages/brainvistools/src/brainvistools/data/: .Rhistory  ST218_Labels.csv  ST220_Labels.csv  ST418_Labels.csv  ST420_Labels.csv  ggseg_figure.r
(+29 files in other folders)
